--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Moon Game</title>
+    <link rel="stylesheet" href="assets/style.css" />
   </head>
   <body>
+    <div class="moon-container">
+      <img
+        src="assets/img/moon.png"
+        onclick="app.gameController.dig()"
+        class="moon"
+        alt=""
+      />
+    </div>
     <div id="game"></div>
     <script src="app/main.js" type="module"></script>
   </body>
